src/objects/Fielo_Contactenos__c.object
<CustomObject>
    <fields>
        <fullName>F_Asunto__c</fullName>
        <label>Asunto</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>F_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Contactar</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Contáctenos</relationshipLabel>
        <relationshipName>Contactenos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_Nombre__c</fullName>
        <label>Nombre</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_NumeroTelefono__c</fullName>
        <label>Número de Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>F_TipoUsuario__c</fullName>
        <formula>IF
(
ISBLANK(F_Member__c)
,&apos;Guest&apos;
, F_Member__r.RecordType.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Usuario</label>
        <type>Text</type>
    </fields>
    <label>Contactenos Fielo</label>
    <listViews>
        <fullName>Fielo_All</fullName>
        <columns>NAME</columns>
        <columns>F_Estado__c</columns>
        <columns>F_Asunto__c</columns>
        <columns>F_Descripcion__c</columns>
        <columns>F_Member__c</columns>
        <columns>F_Nombre__c</columns>
        <columns>F_Email__c</columns>
        <columns>F_NumeroTelefono__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CF-{000000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contáctenos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>